--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"publish": "npm version patch && npm publish --access public",
+		"p": "npm version patch && npm publish --access public",
 		"build": "tsc",
 		"prepare": "npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
