--- a/react/example/package.json
+++ b/react/example/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@e-state/react": "^0.1.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
