--- a/react/example/package.json
+++ b/react/example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@e-state/react": "^0.1.4",
+    "@e-state/react": "^0.1.16",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
@@ -22,5 +22,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.10.0"
   }
 }
