--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@e-state/react",
-	"version": "0.1.9",
+	"version": "0.1.16",
 	"description": "A simple global state management library",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -22,10 +22,14 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.31",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"vite": "^5.0.10"
 	},
 	"keywords": [
 		"react",
 		"state"
-	]
+	],
+	"volta": {
+		"node": "20.10.0"
+	}
 }
