--- a/react/package.json
+++ b/react/package.json
@@ -17,7 +17,7 @@
 	"author": "Shu Nagumo",
 	"license": "MIT",
 	"dependencies": {
-		"@e-state/core": "latest",
+		"@e-state/core": "^0.2.22",
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
