--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,14 +1,14 @@
 {
 	"compilerOptions": {
 		"target": "ESNext",
-		"module": "commonjs",
+		"module": "ES2022",
 		"declaration": true,
 		"sourceMap": true,
 		"outDir": "./dist",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,"moduleResolution":"Bundler"
 	},
 	"include": ["src/**/*.ts"]
 }
