--- a/react/vite-example/package.json
+++ b/react/vite-example/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@e-state/react": "^0.1.16",
+    "@e-state/react": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
