--- a/solid/package.json
+++ b/solid/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@e-state/core",
-	"version": "0.2.26",
-	"description": "A simple global state management library",
+	"name": "@e-state/solid",
+	"version": "0.1.1",
+	"description": "A simple global state management library for solid.js",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -17,11 +17,16 @@
 	"author": "Shu Nagumo",
 	"license": "MIT",
 	"dependencies": {
-		"rfdc": "^1.3.0"
+		"@solid-primitives/storage": "^2.1.1",
+		"solid-js": "^1.8.7"
 	},
 	"devDependencies": {
 		"typescript": "^5.2.2"
 	},
+	"keywords": [
+		"react",
+		"state"
+	],
 	"volta": {
 		"node": "20.10.0"
 	}
