--- a/solid/package.json
+++ b/solid/package.json
@@ -1,33 +1,34 @@
 {
-	"name": "@e-state/solid",
-	"version": "0.1.1",
-	"description": "A simple global state management library for solid.js",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"scripts": {
-		"p": "npm version patch && npm publish --access public",
-		"build": "tsc",
-		"prepare": "npm run build",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/zhoun990/estate.git"
-	},
-	"author": "Shu Nagumo",
-	"license": "MIT",
-	"dependencies": {
-		"@solid-primitives/storage": "^2.1.1",
-		"solid-js": "^1.8.7"
-	},
-	"devDependencies": {
-		"typescript": "^5.2.2"
-	},
-	"keywords": [
-		"react",
-		"state"
-	],
-	"volta": {
-		"node": "20.10.0"
-	}
+  "name": "@e-state/solid",
+  "version": "0.1.2",
+  "description": "A simple global state management library for solid.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "scripts": {
+    "p": "npm version patch && npm publish --access public",
+    "build": "tsc",
+    "prepare": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zhoun990/estate.git"
+  },
+  "author": "Shu Nagumo",
+  "license": "MIT",
+  "dependencies": {
+    "@solid-primitives/storage": "^2.1.1",
+    "solid-js": "^1.8.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  },
+  "keywords": [
+    "react",
+    "state"
+  ],
+  "volta": {
+    "node": "20.10.0"
+  }
 }
