--- a/react/vite-example/package.json
+++ b/react/vite-example/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@e-state/react": "^0.2.0",
+  "dependencies": {  
+    "@e-state/react": "file:../",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
