--- a/react/package.json
+++ b/react/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@e-state/react",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "A simple global state management library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "p": "npm version patch && npm publish --access public",
+    "p": "tsc && npm version patch && npm publish --access public",
     "build": "tsc",
     "build:w": "tsc --watch",
-    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +17,7 @@
   "author": "Shu Nagumo",
   "license": "MIT",
   "dependencies": {
-    "@e-state/core": "latest",
+    "@e-state/core": "^0.2.52",
     "react": "^18"
   },
   "devDependencies": {
@@ -31,6 +30,6 @@
     "state"
   ],
   "volta": {
-    "node": "20.10.0"
+    "node": "22.14.0"
   }
 }
