--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,10 @@ on:
           - react
           - solid
 
+permissions:
+  contents: write
+  id-token: write
+
 jobs:
   detect-changes:
     runs-on: ubuntu-latest
@@ -50,6 +54,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
           
       - uses: actions/setup-node@v4
         with:
@@ -113,6 +118,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
           
       - uses: actions/setup-node@v4
         with:
@@ -164,6 +170,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
           
       - uses: actions/setup-node@v4
         with:
