--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -86,6 +86,18 @@ jobs:
           cd core
           echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
           
+      - name: Wait for NPM registry propagation
+        run: |
+          echo "新しいバージョンがNPMレジストリに反映されるまで待機中..."
+          for i in {1..30}; do
+            if npm view @e-state/core@${{ steps.core-version.outputs.version }} version > /dev/null 2>&1; then
+              echo "バージョン ${{ steps.core-version.outputs.version }} が利用可能になりました"
+              break
+            fi
+            echo "待機中... ($i/30)"
+            sleep 10
+          done
+          
       - name: Update react dependency
         run: |
           cd react
