feat: remove GitHub Actions workflow for package publishing and add dependency update script
- Deleted the publish.yml workflow file.
- Updated core/package.json to include a call to the new update-dependencies.sh script.
- Added update-dependencies.sh script to automate dependency updates for react package after core version changes.

--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "p": "tsc && npm version patch && npm publish --access public",
+    "p": "tsc && npm version patch && npm publish --access public && ../scripts/update-dependencies.sh",
     "build": "tsc",
     "build:w": "tsc --watch",
     "test": "jest",
