--- a/core/package.json
+++ b/core/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@e-state/core",
-  "version": "0.2.63",
+  "version": "0.3.0",
   "description": "A simple global state management library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "p": "tsc && npm version patch && npm publish --access public && ../scripts/update-dependencies.sh",
+    "p": "tsc && jest && npm version patch && npm publish --access public && ../scripts/update-dependencies.sh",
+    "p:minor": "tsc && jest && npm version minor && npm publish --access public && ../scripts/update-dependencies.sh",
+    "p:major": "tsc && jest && npm version major && npm publish --access public && ../scripts/update-dependencies.sh",
     "build": "tsc",
     "build:w": "tsc --watch",
     "test": "jest",
@@ -14,11 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zhoun990/estate.git"
+    "url": "git+https://github.com/zhoun990/estate.git"
   },
   "author": "Shu Nagumo",
   "license": "MIT",
   "dependencies": {
+    "@e-state/core": "0.3.0",
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
