--- a/core/package.json
+++ b/core/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@e-state/core",
-  "version": "0.3.1",
+  "version": "0.3.3",
   "description": "A simple global state management library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "p": "tsc && jest && npm version patch && npm publish --access public && ../scripts/update-dependencies.sh",
+    "p:react": "tsc && jest && npm version patch && npm publish --access public && ../scripts/update-and-publish.sh",
     "p:minor": "tsc && jest && npm version minor && npm publish --access public && ../scripts/update-dependencies.sh",
     "p:major": "tsc && jest && npm version major && npm publish --access public && ../scripts/update-dependencies.sh",
     "build": "tsc",
@@ -20,10 +21,7 @@
   },
   "author": "Shu Nagumo",
   "license": "MIT",
-  "dependencies": {
-    "@e-state/core": "0.3.0",
-    "rfdc": "^1.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.0.4",
