feat: bump core and react package versions to v0.3.7, enhance utility functions and update TypeScript configuration
- Updated core package version to 0.3.7 and made improvements to utility functions for better type handling.
- Updated react package version to 0.3.6, ensuring compatibility with the latest core version.
- Enhanced TypeScript configuration by adding strictness options for better code quality.

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -9,7 +9,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "Bundler"
+    "moduleResolution": "Bundler",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*.ts"]
 }
