--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,14 +1,18 @@
 {
-	"compilerOptions": {
-		"target": "ESNext",
-		"module": "ES2022",
-		"declaration": true,
-		"sourceMap": true,
-		"outDir": "./dist",
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"strict": true,
-		"skipLibCheck": true,"moduleResolution":"Bundler"
-	},
-	"include": ["src/**/*.ts"]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ES2022",
+    "declaration": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "moduleResolution": "Bundler",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src/**/*.ts"]
 }
